# TensorRT

./: .gitignore  Dockerfile  Makefile  README.md  gpu_info.txt  log.txt  requirements.txt  test_gelu_only.py
benchmark/: 00_benchmark.py  01_benchmark_multiprofile.py  01_compare_engines.py  02_compare_engines.py  03_benchmark_plugin.py  04_baseline32_nsys-rep.py  04_bias_gelu32_nsys-rep.py  04_fused_ffn32_nsys-rep.py  04_gelu32_nsys-rep.py  benchmark_multiprofile.py  debug_plugin.py  test_plugin.py
calibration/: int8_calib.cache
debug/: check_subgraph.py  debug_plugin.py  engine_check.py  engine_log.txt  test_plugin.py
engines/: 00_build_fp32_engine.py  01_build_fp16_engine.py  02_int8_calibrator.py  02_int8_calibrator_and_engine.py  03_build_fp16_engine_multiprofile.py  04_build_plugin_engine.py  build_bias_gelu_engine.py  build_engine.py  build_fp16_engine.py  build_fp16_engine_multiprofile.py  build_fused_engine.py  build_plugin_engine.py  build_plugin_engine_v2.py
export/: 01_Failed_bert_onnx_export_plugin.py  01_bert_base_plugin.py  02_bert_onnx_export_bias_gelu.py  03_bert_onnx_export_fused.py  bert_onnx_export.py  bert_onnx_export_bias_gelu.py  bert_onnx_export_fused.py
plugin/: CMakeLists.txt  bias_gelu.cpp  bias_gelu.h  bias_gelu_kernel.cu  bias_gelu_plugin.cpp  bias_gelu_plugin.h  fused_FFN_kernel.cu  fused_FFN_plugin.cpp  fused_FFN_plugin.h  fused_gemm_gelu_kernel.cu  fused_gemm_gelu_plugin.cpp  fused_gemm_gelu_plugin.h  gelu_kernel.cu  gelu_plugin.cpp  gelu_plugin.h
results/: 00_quantization.txt  01_benchmark_multiprofile.txt  03_plugin_latency.txt  (+12 more)
(+11 files in other folders)
